attempt to fix the issue with white space on IE

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ section {
   height: 100vh;
   width: 100%;
   -webkit-filter: blur(0.000001px);
+  -webkit-font-smoothing: antialiased !important;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
 section.hero {
@@ -109,7 +111,8 @@ section.white {
 }
 
 #contact {
-padding-top: 8%;
+padding-top: 8.5%;
+overflow-x: hidden;
 }
 
 .section.contact p {
